# api/swagger.yaml
@@ -485,71 +485,7 @@ paths:
       security:
       - OauthSecurity:
         - "admin"
-  /group/{groupId}/getChildren:
-    get:
-      summary: "Gets children"
-      description: "Gets a list of all the children of the group"
-      operationId: "getChildren"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "groupId"
-        in: "path"
-        description: "The id of the group"
-        required: true
-        type: "integer"
-      responses:
-        200:
-          description: "The children of the group"
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/Child"
-        400:
-          description: "bad input parameter"
-        403:
-          description: "You have no permissions to view this group"
-        404:
-          description: "Group not found"
-      x-swagger-router-controller: "Default"
-      security:
-      - OauthSecurity:
-        - "admin"
-        - "teacher"
-        - "parent"
-  /group/{groupId}/getPosts:
-    get:
-      summary: "Gets posts"
-      description: "Gets a list of all the posts of the group"
-      operationId: "getPosts"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "groupId"
-        in: "path"
-        description: "The id of the group"
-        required: true
-        type: "integer"
-      responses:
-        200:
-          description: "The posts of the group"
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/Post"
-        400:
-          description: "bad input parameter"
-        403:
-          description: "You have no permissions to view this group"
-        404:
-          description: "Group not found"
-      x-swagger-router-controller: "Default"
-      security:
-      - OauthSecurity:
-        - "admin"
-        - "teacher"
-        - "parent"
-  /group/{groupId}/post/{postId}:
+  /post/{postId}:
     get:
       summary: "Gets a post"
       description: "Gets a post of the group"
@@ -557,11 +493,6 @@ paths:
       produces:
       - "application/json"
       parameters:
-      - name: "groupId"
-        in: "path"
-        description: "The id of the group"
-        required: true
-        type: "integer"
       - name: "postId"
         in: "path"
         description: "The id of the post"
@@ -578,27 +509,20 @@ paths:
           description: "You have no permissions to view this post"
         404:
           description: "Post not found"
-      x-swagger-router-controller: "Default"
+      x-swagger-router-controller: "post"
       security:
       - OauthSecurity:
         - "admin"
         - "teacher"
         - "parent"
-  /group/{groupId}/post/{postId}/like:
+  /post/{postId}/like:
     post:
       summary: "makes a like"
       description: "makes or removes a like on the post"
-      operationId: "like"
-      consumes:
-      - "application/json"
+      operationId: "likePost"
       produces:
       - "application/json"
       parameters:
-      - name: "groupId"
-        in: "path"
-        description: "The id of the group"
-        required: true
-        type: "integer"
       - name: "postId"
         in: "path"
         description: "The id of the post"
@@ -607,13 +531,15 @@ paths:
       responses:
         200:
           description: "Successfully liked/unliked the post"
+          schema:
+            type: boolean
         400:
           description: "bad input parameter"
         403:
           description: "You have no permissions to like this post"
         404:
           description: "Post not found"
-      x-swagger-router-controller: "Default"
+      x-swagger-router-controller: "post"
       security:
       - OauthSecurity:
         - "admin"
@@ -701,28 +627,23 @@ paths:
         - "admin"
         - "teacher"
         - "parent"
-  /group/{groupId}/post/{postId}/comment:
+  /post/{postId}/comment:
     post:
       summary: "makes a comment"
       description: "makes a comment on the post"
-      operationId: "comment"
+      operationId: "commentOnPost"
       consumes:
       - "text/plain"
       produces:
       - "application/json"
       parameters:
-      - name: "groupId"
-        in: "path"
-        description: "The id of the group"
-        required: true
-        type: "integer"
       - name: "postId"
         in: "path"
         description: "The id of the post"
         required: true
         type: "integer"
       - in: "body"
-        name: "commentText"
+        name: "comment"
         description: "The text of the comment"
         required: true
         schema:
@@ -736,7 +657,7 @@ paths:
           description: "You have no permission to comment in this group."
         404:
           description: "Post not found"
-      x-swagger-router-controller: "Default"
+      x-swagger-router-controller: "post"
       security:
       - OauthSecurity:
         - "admin"
